# good-morning-sonar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/: app.py
src/good_morning_sonar/: app.py
tests/: conftest.py
