[project]
  name = "good-morning-sonar"
  version = "0.0.0"
  description = ""
  authors = [
    {name = "Thiago Garbazza", email = "thiagogarbazza@gmail.com"}
  ]
  requires-python = ">=3.13,<4.0"

[tool.poetry]
  packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
  fastapi = {extras = ["standard"], version = "^0.115.8"}

[tool.poetry.group.dev.dependencies]
  pytest = "^8.3.4"
  pytest-cov = "^6.0.0"
  taskipy = "^1.14.1"
  ruff = "^0.9.5"

[tool.taskipy.tasks]
  lint = 'ruff check .; ruff check . --diff'
  format = 'ruff check . --fix; ruff format .'
  run = 'fastapi dev src/app.py'
  pre_test = 'task lint'
  test = 'pytest -s -x --cov=src -vv'
  post_test = 'coverage html'

[tool.pytest.ini_options]
  pythonpath = "."
  addopts = '-p no:warnings'

[tool.ruff]
  line-length = 79
  extend-exclude = ['migrations']

[tool.ruff.lint]
  preview = true
  select = ['I', 'F', 'E', 'W', 'PL', 'PT']
  ignore = ['E402', 'F811']

[tool.ruff.format]
  preview = true
  quote-style = 'single'


