[project]
  name = "good-morning-sonar"
  version = "0.1.0"
  description = ""
  authors = [
    {name = "Thiago Garbazza",email = "1093328+thiagogarbazza@users.noreply.github.com"}
  ]
  readme = "README.md"
  requires-python = ">=3.13,<4.0"
  dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
  ]

[tool.poetry]
  packages = [{include = "good_morning_sonar", from = "src"}]

[tool.poetry.group.dev.dependencies]
  pytest = "^8.3.5"
  pytest-cov = "^6.1.1"
  taskipy = "^1.14.1"
  ruff = "^0.11.10"

[build-system]
  requires = ["poetry-core>=2.0.0,<3.0.0"]
  build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
  pythonpath = "."
  addopts = '-p no:warnings'

[tool.taskipy.tasks]
  lint = 'ruff check'
  pre_format = 'ruff check --fix'
  format = 'ruff format'
  run = 'fastapi dev good_morning_sonar/app.py'
  pre_test = 'task lint'
  test = 'pytest -s -x --cov=good_morning_sonar -vv'
  post_test = 'coverage html'

[tool.ruff]
  line-length = 79
  extend-exclude = ['migrations']
[tool.ruff.format]
  preview = true
  quote-style = 'single'
[tool.ruff.lint]
  preview = true
  select = ['I', 'F', 'E', 'W', 'PL', 'PT']
